syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/dashboard_stats";
package api.dashboard_stats;


message DashboardStatsResponse {
	string category_id = 1;
	string category_name = 2;
	uint32 viewers = 3;
	optional string started_at = 4;
	string title = 5;
	uint32 chat_messages = 6;
	uint32 followers = 7;
	uint32 used_emotes = 8;
	uint32 requested_songs = 9;
}
